
/*------------------------------------------------------------------------------
 * AUTO GENERATED
 *----------------------------------------------------------------------------*/

syntax = "proto3";
package caikit_data_model.runtime;


/*-- MESSAGES ----------------------------------------------------------------*/

message ModelPointer {

  /*-- fields --*/
  string model_id = 1;
}
